# HOTSOUP

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  main.cpp  res
bench/: CMakeLists.template.txt  src
builders/: checkout-dependencies.sh  install-deps.sh  install-system-deps.sh  make-debug.sh  make-run.sh  resolve-deps.sh
include/: bucephalus.hpp  cube.hpp  glDebug.cpp  glDebug.hpp  glDebug.hpp.old  glHelpers.cpp  glHelpers.hpp  glWin.cpp  glshapes.hpp
include/souputils/: convenience.cpp  convenience.hpp  glDebug.cpp  glDebug.hpp  glHelpers.cpp  glHelpers.hpp  glfwHelpers.cpp  glfwHelpers.hpp
scripts/: checkout-dependencies.sh
stove/: burner
